--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
     <link href='styles/main.css' rel='stylesheet' type="text/css">
   </head>
   <body ng-app="toDoListApp">
-
+    <h1 ng-click="helloWorld()">MY TODO APPlICATION</h1>
       <div ng-controller="mainCtrl" class="list">
-        <h1 ng-click="helloWorld()">MY TODO APPlICATION</h1>
-        <input type="checkbox">
-        <label class="editing-label">a sample todo</label>
-        <input class="editing-label"type="text">
-        <div class="actions" ng-controller="coolCtrl">
-          <a href="#" ng-click="whoAmI()">Edit</a>
-          <a href="#" ng-click="helloWorld()">Save</a>
-          <!-- says when user clicks save, fire the helloWorld function -->
-          <a href="#" class="Delete">Delete</a>
-        </div>
-      </div>
+      <!-- todo list will be here -->
+        <div class="item" ng-class="{'editing-item': editing, 'edited': todo.edited}" ng-repeat="todo in todos">
 
-      <div ng-controller="imASibling">
-        {{foobar}}
-      </div>
+          <input ng-model="todo.completed" type="checkbox">
 
+          <label ng-hide="editing" class="editing-label" ng-click="helloWorld()">{{todo.name}}</label> <!-- .editing-label -->
+
+          <input ng-change="todo.edited = true" ng-blur="editing = false;" ng-show="editing" ng-model="todo.name" class="editing-label"type="text"> <!-- .editing-label -->
+
+        <!-- buttons -->
+          <div class="actions">
+            <a href="#" ng-click="editing = !editing">Edit</a>  <!-- if editing is set to true, set it to false and vise versa -->
+            <a href="#" ng-click="helloConsole()">Save</a>
+            <!-- says when user clicks save, fire the helloWorld function -->
+            <a href="#" class="Delete">Delete</a>
+          </div>  <!-- end of buttons           .actions -->
+        </div>   <!-- end ng-repeat all todos   .item-->
+      </div>  <!-- end list of all todos        .list-->
 
     <script src="bower_components/angular/angular.js" type="text/javascript"></script>
     <script src="scripts/app.js" type="text/javascript"></script>
